contact bottom overflow fix mobile

--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -70,5 +70,9 @@ button {
   margin-top: -100px;
 }
 
+.submit-text {
+  margin-bottom: -50px;
+}
+
 
 
